--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <main>
         <article>
             <h2>Primeiramente, um feliz natal</h2>
-            <p>toca esse áudio aqui vai </p>
+            <p>toca esse áudio aqui vai ↴ </p>
             <audio controls>
                 <source  src="audio/Ed Sheeran - Perfect (Official Music Video).mp3" type="">
             </audio>
+            <!--Adicionar as imagens-->
             <h2>Aqui alguns dos nossos melhores momentos...</h2>
             <picture>
                 <img src="" alt="">
