config  size das imagens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <!--Adicionar as imagens-->
             <h2>Aqui alguns dos nossos melhores momentos...</h2>
             <picture>
-                <img src="" alt="">
+                <source media="(max-width: 450px)" srcset="images/foto-shop-p.jpeg">
+                <source media="(max-width: 900px )" srcset="images/foto-shop-m.jpeg">
+                <img src="images/foto-shop-g.jpeg" alt="">
             </picture>
             <picture>
                 <img src="" alt="">
