adição e remoção de fotos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <article>
             <h2>Primeiramente, um feliz natal</h2>
             <p>toca esse áudio aqui vai ↴ </p>
-            <audio controls>
+            <audio controls loop>
                 <source  src="audio/Ed Sheeran - Perfect (Official Music Video).mp3" type="">
             </audio>
             <!--Adicionar as imagens-->
@@ -24,17 +24,18 @@
             <picture>
                 <source media="(max-width: 450px)" srcset="images/foto-shop-p.jpeg">
                 <source media="(max-width: 900px )" srcset="images/foto-shop-m.jpeg">
-                <img src="images/foto-shop-g.jpeg" alt="">
+                <img src="images/foto-shop-g.jpeg" alt="best day">
             </picture>
             <picture>
-                <img src="" alt="">
+                <source media="(max-width: 450px )" srcset="images/nos-fofinho-p.jpeg">
+                <source media="(max-width:900px )" srcset="images/nos-fofinho-m.jpeg">
+                <img src="images/nos-fofinho-g.jpeg" alt="nos dois fofos">
             </picture>
             <picture>
-                <img src="" alt="">
-            </picture>
-            <picture>
-                <img src="" alt="">
-            </picture>
+                <source media="(max-width: 450px)" srcset="images/foto-shop-2-p.jpeg">
+                <source media="(max-width: 900px)" srcset="images/foto-shop-2-m.jpeg">
+                <img src="images/foto-shop-2-g.jpeg" alt="">
+            </picture> <br>
             <p>
                 Sempre que olho para essas fotos, me lembro dos melhores momentos da minha vida que foram ao seu lado...<br> 
                 Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito
