--- a/index.html
+++ b/index.html
@@ -35,11 +35,24 @@
                 <source media="(max-width: 450px)" srcset="images/foto-shop-2-p.jpeg">
                 <source media="(max-width: 900px)" srcset="images/foto-shop-2-m.jpeg">
                 <img src="images/foto-shop-2-g.jpeg" alt="">
-            </picture> <br>
+            </picture>
             <p>
-                Sempre que olho para essas fotos, me lembro dos melhores momentos da minha vida que foram ao seu lado...<br> 
-                Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito
+                Sempre que olho para essas fotos, me lembro dos melhores momentos da minha vida que foram ao seu lado... 
             </p>
+            <h2 id="amor">E aqui uma homenagem ao nosso amor</h2>
+                <video controls>
+                    <source src="video/video-namorada.mp4" type="">
+                </video>
+            <p>
+                Mas então é isso meu amor, espero que você goste dessa surpresa e que te alegre nesse natal... quero que saiba que te amo e sempre vou te amar. <br>
+                e que eu ainda possa comprar uma dessas pra gente kkkkkk.
+            </p>
+            <picture>
+                <source media="(max-width: 45px)" srcset="images/alianças-p.png">
+                <source media="(max-width: 900px)" srcset="images/alianças-m.png">
+                <img src="images/alianças-g.png" alt="">
+            </picture>
+            <p>Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito</p>
         </article>
     </main>
 </body>
