atualização de texto

--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <body>
     <header>
         <h1>Oooi meu amor... tudo bem ?</h1>
-        <p>ja que não sou muito bom em fazer carta, decide fazer um site pra você</p>
+        <p>ja que não sou muito bom em fazer cartas, decide fazer um site pra você.</p>
     </header>
     <main>
         <article>
             <h2>Primeiramente, um feliz natal</h2>
             <p>toca esse áudio aqui vai ↴ </p>
             <audio controls loop>
-                <source  src="audio/Ed Sheeran - Perfect (Official Music Video).mp3" type="">
+                <source  src="audio/Ed Sheeran Perfect (Lyrics) (Traduçâo)  Legendado Inglês Português.mp3" type="">
             </audio>
-            <!--Adicionar as imagens-->
             <h2>Aqui alguns dos nossos melhores momentos...</h2>
             <picture>
                 <source media="(max-width: 450px)" srcset="images/foto-shop-p.jpeg">
@@ -37,9 +36,14 @@
                 <img src="images/foto-shop-2-g.jpeg" alt="">
             </picture>
             <p>
-                Sempre que olho para essas fotos, me lembro dos melhores momentos da minha vida que foram ao seu lado... 
+                Sempre que olho para essas fotos, me lembro dos melhores momentos da minha vida que foram ao seu lado... <br>
+                Só tenho a agradecer por todos os momentos que passamos juntos e tudo que fizemos com certeza nunca vou esquecer de nada, até mesmo aqueles videos bobos no meu celular kkkkk é algo que amo demais. Obrigado por sempre estar do meu lado até nos momentos que você nem precisava estar, mesmo brava ou chateada sempre ficou do meu lado e me apoiou em tudo, eu serei eternamente grato por isso...
             </p>
-            <h2 id="amor">E aqui uma homenagem ao nosso amor</h2>
+            <p>
+                Por um bom tempo eu pensei que eu devia estar sozinho, que não sirvo pra namorar que eu não sou bom pra isso, até ver como fico ao seu lado, o brilho que aparece em meus olhos quando te vejo. E pensei bastante foram longos 2 meses pensando o que eu deveria fazer porém finalmente me decidi e finalmente entendi o que eu quero pra minha vida...
+                e com certeza você é uma delas, porque eu Te amo e sempre irei te amar, e espero que ainda não seja tarde pra reconquistar seu amor e reconquitar aquela garotinha linda que sempre me fez feliz, desde a época da escola com suas brincadeira e o mesmo humor quebrado que o meu.
+            </p>
+            <h2 id="amor">E aqui uma homenagem ao nosso amor...</h2>
                 <video controls>
                     <source src="video/video-namorada.mp4" type="">
                 </video>
@@ -55,5 +59,8 @@
             <p>Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito</p>
         </article>
     </main>
+    <footer>
+        <p>Site criado para o amor da minha vida</p>
+    </footer>
 </body>
 </html>
