Versão final do site

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                 </video>
             <p>
                 Mas então é isso meu amor, espero que você goste dessa surpresa e que te alegre nesse natal... quero que saiba que te amo e sempre vou te amar. <br>
-                e que eu ainda possa comprar uma dessas pra gente kkkkkk.
+                E que eu ainda possa comprar uma dessas pra gente kkkkkk.
             </p>
             <picture>
                 <source media="(max-width: 45px)" srcset="images/alianças-p.png">
                 <source media="(max-width: 900px)" srcset="images/alianças-m.png">
                 <img src="images/alianças-g.png" alt="">
             </picture>
-            <p>Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito</p>
+            <p>Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito.</p>
         </article>
     </main>
     <footer>
-        <p>Site criado para o amor da minha vida</p>
+        <p>Site criado para o <a href="https://www.instagram.com/hp.castilho/" target="_blank">amor da minha vida</a></p>
     </footer>
 </body>
 </html>
