--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
             <p>
                 Por um bom tempo eu pensei que eu devia estar sozinho, que não sirvo pra namorar que eu não sou bom pra isso, até ver como fico ao seu lado, o brilho que aparece em meus olhos quando te vejo. E pensei bastante foram longos 2 meses pensando o que eu deveria fazer porém finalmente me decidi e finalmente entendi o que eu quero pra minha vida...
-                e com certeza você é uma delas, porque eu Te amo e sempre irei te amar, e espero que ainda não seja tarde pra reconquistar seu amor e reconquitar aquela garotinha linda que sempre me fez feliz, desde a época da escola com suas brincadeira e o mesmo humor quebrado que o meu.
+                e com certeza você é uma delas, porque eu Te amo e sempre irei te amar, e espero que ainda não seja tarde pra reconquistar seu amor e reconquistar aquela garotinha linda que sempre me fez feliz, desde a época da escola com suas brincadeira e o mesmo humor quebrado que o meu.
             </p>
             <h2 id="amor">E aqui uma homenagem ao nosso amor...</h2>
                 <video controls>
