--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <img src="images/alianças-g.png" alt="">
             </picture>
             <p>Sei que errei muito, porém espero ter outra chance de passar a vida ao seu lado. Pois te amo muito.</p>
+            <aside>
+                <h2 id="namorar">Quer namorar comigo ?</h2>
+                <a href="#">Sim</a>
+                <a href="#">Sim</a>
+            </aside>
         </article>
     </main>
     <footer>
